Set up CI with Azure Pipelines
[skip ci]

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,4 +37,4 @@ stages:
         command: 'push'
         packagesToPush: '$(Build.ArtifactStagingDirectory)/**/*.nupkg;!$(Build.ArtifactStagingDirectory)/**/*.symbols.nupkg'
         nuGetFeedType: 'internal'
-        publishVstsFeed: '4cc94497-d4fc-4a1c-a0cb-6a793cd32ab9/3349e8f0-9397-4fee-b664-254d6f443c29'
+        publishVstsFeed: '2fb67b9a-5ef9-4403-9fde-91fef5f5fd78'
